# wantstoparty

./: .gitignore  CNAME  LICENSE.txt  README.md  pyproject.toml  setup.py  test.py  uploading.txt
.github/: CONTRIBUTING.md  README.md  whats_new.md
docs/: .buildinfo  conf.py  examples.html  examples.md  genindex.html  gettingstarted.html  index.html  index.md  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  wantstoparty.html  wantstoparty.oauth.html  wantstoparty.rst
docs-build/: examples.md  gettingstarted.md  index.md  modules.rst  wantstoparty.oauth.rst
examples/: async.py  async_use.py  discordpy_bot.py  max_filesize.py  non-async_use.py  nonasync_use.py
py-wants-to-party/: errors.py  http.py
py-wants-to-party/async/: async_wtp.py
wantstoparty/: __init__.py  api.py  checks.py  errors.py  objects.py  utils.py  wtp.py
wantstoparty/_async/: __init__.py  async_wtp.py
wantstoparty/oauth/: __init__.py  oauth.py
wantstoparty/user/: __init__.py  user.py
