[project]
name = "wantstoparty"
version = "1.0.0"
authors = [
  { name="acatia", email="acatia@mail.com" },
]
description = "An API wrapper for the wants-to.party API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/acatiadroid/py-wants-to-party"
"Bug Tracker" = "https://github.com/acatiadroid/py-wants-to-party/issues"